# OpenMetadata

./: .coveragerc  .dockerignore  .env  .git-blame-ignore-revs  .gitbook.yaml  .gitignore  .graphifyignore  .openmetadata.yaml.bk  .phylum_project  .pnp.cjs  .pre-commit-config.yaml  .pre-commit-config.yaml.swp  .prettierrc.yml  .pylintrc  .shell-fix-note  .snyk  =2.0.0  ADDED_TESTS_SUMMARY.md  AGENTS.md  APPLICATION.md  AUTHENTICATION_GUIDE.md  AZURE_KV_EXPIRATION_USAGE.md  BIGQUERY_SSO_ARCHITECTURE.md  BUILD_SUCCESS.md  BUILD_SUCCESS_SUMMARY.md  CICD_PIPELINE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  COMPLETE_TEST_COVERAGE_ANALYSIS.md  CONTRIBUTING.md  CREDENTIALS_ENTITY_DESIGN.md  CURSOR-TASKS.md  DEPLOYMENT_CHECKLIST.md  DEVELOPER.md  DEVELOPMENT_AUTH_GUIDE.md  DISTRIBUTED_INGESTION_IMPLEMENTATION.md  DOCKER_DEPLOYMENT_COMPLETE.md  Dockerfile  FINAL_SETUP_INSTRUCTIONS.md  (+145 more)
identity-trust-sidecar/: README.md  pyproject.toml
identity-trust-sidecar/src/identity_trust_sidecar/: __init__.py  cli.py  config.py  om_client.py
identity-trust-sidecar/tests/: test_config.py  test_om_client.py
ingestion/:  MANIFEST.in  .coveragerc  .dockerignore  .pre-commit-config.yaml  .pylintrc  .snyk  ARGO_SETUP_MAC.md  BULK_API_OPTIMIZATION_SUMMARY.md  CONNECTION_POOLING_GUIDE.md  DISTRIBUTED_INGESTION.md  Dockerfile  Dockerfile.ci  Dockerfile.distributed  Dockerfile_dev  Dockerfile_local  LICENSE  Makefile  OWNER_CONFIG_GUIDE.md  README.md  SDK_COMPLETION_REPORT.md  SDK_COVERAGE_REPORT.md  SDK_FINAL_STATUS_REPORT.md  SDK_IMPLEMENTATION_PLAN.md  SDK_PROGRESS_SUMMARY.md  SETTINGS.md  UV_SETUP.md  airflow-constraints-2.10.5.txt  airflow-constraints-3.1.2.txt  airflow-constraints-3.1.5.txt  airflow-constraints-3.1.7.txt  airflow-constraints-3.2.1.txt  airflow.cfg  constraints.txt  ingestion_dependency.sh  lineage.py  local_ingestion_dependency.sh  noxfile.py  pyproject.toml  redshift.yaml  redshift_simple.yaml  (+27 more)
ingestion/.basedpyright/: baseline.json
ingestion/connectors/: Dockerfile-base  README.md  docker-cli.py  main.py
ingestion/docs/: GCS_FOLDERS_ONLY_FEATURE.md
ingestion/docs/design/: 2026-07-01-ingestion-eta-design.md  2026-07-02-lineage-usage-progress-counters-design.md  2026-07-02-lineage-usage-progress-counters-plan.md  2026-07-02-service-scoped-progress-stream-design.md  2026-07-02-service-scoped-progress-stream-plan.md  ingestion-diagnostics.md
ingestion/examples/: README.md  entity_field_updates.py  gcs_folders_only_manifest_example.md  glossary_description_update.py  langchain_openmetadata_template.ipynb  metadata_health_report.ipynb  openmetadata_ai_agent.ipynb  postgres.json  requirements.txt  snowflake.json  workflows
ingestion/examples/airflow/: airflow.cfg  sample_tables_airflow_example.py
ingestion/examples/airflow_lineage/: openmetadata_airflow_lineage_example.py
ingestion/examples/amundsen_data/: service_type.json
ingestion/examples/auth_examples/: azure.json  okta_example.json
ingestion/examples/creds/: bigquery-cred.json
ingestion/examples/kafka_schemas/: topics.json
ingestion/examples/openapi/: sample.json
ingestion/examples/scripts/: deltalake_ingestion.py
ingestion/examples/shopify_schemas/: database.json  query_log  service.json  tables.json
ingestion/examples/superset_data/: charts.json  dashboards.json  service.json
ingestion/examples/workflows/: access_control.json  airbyte.yaml  airflow.yaml  amundsen.json  amundsen.yaml  athena.json  athena.yaml  atlas.json  atlas.yaml  atlas_mapping.json  azure_sql.json  (+106 more)
ingestion/ingestion_scheduler/: __init__.py  jobs.py  scheduler.py  settings.py
ingestion/operators/: README.md
ingestion/parallel/: ARCHITECTURE.md  Makefile  README.md  __init__.py  om_adapters.py  om_argo_runner.py  om_parallel.py  workflow.yaml  workflow_executor.py
ingestion/pipelines/: bigquery.json  extended_sample_data.yaml  ldap_user_to_catalog.json  lineage.yaml  metadata_to_es.json  metadata_to_es.yaml  mssql.json  mysql.json  postgres.json  pw_sample_data.yaml  redshift.json  redshift_sql.json  redshift_usage.json  sample_dashboards.json  sample_data.json  sample_data.yaml  sample_data_aut.yaml  sample_data_docker.yaml  sample_openlineage_kinesis.yaml  sample_tables.json  sample_topics.json  sample_usage.json  sample_usage.yaml  sample_usage_aut.yaml  sample_users.json  sasCatalog.yaml  snowflake.json  snowflake_usage.json
ingestion/plugins/: README.md  import_checker.py  print_checker.py
ingestion/processor/: pii.py
ingestion/scripts/: batch_generate_entities.py  debug_tag_processor.py  fix_entity_imports.py  fix_list_tests.py  fix_sdk_imports.py  fix_test_imports.py  fix_test_required_fields.py  generate_sdk_entities.py  generate_settings_docs.py  update_sdk_entities.py
ingestion/src/: setup.py
ingestion/tests/: README.md  __init__.py  conftest.py  constants.py
openmetadata-airflow-apis/: .coveragerc  Makefile  README.md  constraints.txt  pyproject.toml  setup.py  sonar-project.properties
openmetadata-airflow-apis/examples/: deploy_dag.json  metadata_es_ingestion.json  sample-data.json  test.json  test.py  test_connection.json  trigger_dag.json
openmetadata-airflow-apis/openmetadata_managed_apis/: __init__.py  main.py  plugin.py
openmetadata-webserver-cli/: README.md  app.py  dummy.yaml  models.py  pyproject.toml  repository.py  run.py
openmetadata-webserver-cli/ui/: .env  package-lock.json  package.json  package.old.json  tsconfig.json  tsconfig.json.old  tsconfig.tsbuildinfo  webpack.config.js
openmetadata-webserver-cli/webserver/: __init__.py  models.py  repository.py  routes.py  workflow.py
thirdeye-py-service/: .dockerignore  Dockerfile  GRAPHQL_QUERIES.md  QUICK_START.md  README.md  README_MIGRATIONS.md  SETUP_COMPLETE.md  STARTUP_VERIFICATION.md  TESTING_SUMMARY.md  TEST_ENDPOINTS.py  TEST_RESULTS.md  WHERE_ARE_LOGS.md  ZI_SCORE_API.md  ZI_SCORE_IMPLEMENTATION.md  create-views.sh  pyproject.toml  requirements.txt  setup_database_views.py  start-service.sh  test_query.py  test_zi_score_api.py  view-logs.sh
thirdeye-py-service/tests/: __init__.py  conftest.py  test_health.py
(+44746 files in other folders)
