[flake8]
# We ignore the line length issues here, since black will take care of them.
max-line-length = 150
max-complexity = 15
ignore =
    # Ignore: 1 blank line required before class docstring.
    D203,
    W503
exclude =
    .git,
    __pycache__
per-file-ignores =
    # imported but unused
    __init__.py: F401
[metadata]
license_files = LICENSE
[mypy]
mypy_path = src
plugins =
    sqlmypy,
    pydantic.mypy
ignore_missing_imports = yes
namespace_packages = true
strict_optional = yes
check_untyped_defs = yes
# eventually we'd like to enable these
disallow_untyped_defs = no
disallow_incomplete_defs = no

[isort]
profile = black
indent='    '
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
testpaths =
    tests/unit

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
include = *