[build-system]
requires = ["setuptools~=70.3.0"]
build-backend = "setuptools.build_meta"

# We will keep handling dependencies in setup.py
# since it helps us organize and isolate version management
[project]
name = "openmetadata_managed_apis"
version = "1.8.2.0"
readme = "README.md"
authors = [
    {name = "OpenMetadata Committers"}
]
license = {file = "LICENSE"}
description = "Airflow REST APIs to create and manage DAGS"
requires-python = ">=3.9"
dependencies = [
    "pendulum~=3.0",
    "apache-airflow>=2.2.2",
    "Flask==2.2.5",
    "Flask-Admin==1.6.0",
]

[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "pytest",
    "pylint",
    "pytest-cov",
    "isort",
    "pycln",
]

[project.urls]
Homepage = "https://open-metadata.org/"
Documentation = "https://docs.open-metadata.org/"
Source = "https://github.com/open-metadata/OpenMetadata"


[tool.setuptools.packages.find]
include = ["openmetadata_managed_apis.*", "openmetadata_managed_apis"]

[tool.setuptools.package-data]
"openmetadata_managed_apis" = ["views/templates/rest_api/index.html", "resources/dag_runner.j2"]

[project.entry-points."airflow.plugins"]
openmetadata_managed_apis = "openmetadata_managed_apis.plugin:RestApiPlugin"


[tool.coverage.run]
source = [
    "env/lib/python3.9/site-packages/openmetadata_managed_apis"
]
relative_files = true
branch = true

[tool.coverage.report]
omit = [
    "*__init__*",
    "tests/*",
    "views/**",
    "plugin.py"
]