[build-system]
requires = ["setuptools~=70.3.0"]
build-backend = "setuptools.build_meta"

# We will keep handling dependencies in setup.py
# since it helps us organize and isolate version management
[project]
name = "openmetadata_managed_apis"
version = "1.12.0.0.dev0"
readme = "README.md"
authors = [
    {name = "OpenMetadata Committers"}
]
license = {file = "LICENSE"}
description = "Airflow REST APIs to create and manage DAGS"
requires-python = ">=3.10"
dependencies = [
    "pendulum~=3.0",
    "apache-airflow>=2.2.2",
    "apache-airflow-providers-fab>=1.0.0",
    "Flask==2.2.5",
    "packaging>=20.0",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.15.12",
    "pytest",
    "pylint",
    "pytest-cov",
]

[project.urls]
Homepage = "https://open-metadata.org/"
Documentation = "https://docs.open-metadata.org/"
Source = "https://github.com/open-metadata/OpenMetadata"


[tool.setuptools.packages.find]
include = ["openmetadata_managed_apis.*", "openmetadata_managed_apis"]

[tool.setuptools.package-data]
"openmetadata_managed_apis" = ["views/templates/rest_api/index.html", "resources/dag_runner.j2"]

[project.entry-points."airflow.plugins"]
openmetadata_managed_apis = "openmetadata_managed_apis.plugin:RestApiPlugin"


[tool.coverage.run]
source = ["openmetadata_managed_apis"]
relative_files = true
branch = true
parallel = true

# Remap installed-package paths back to the source tree so that
# ``coverage combine`` (in a lightweight CI job without the package
# installed) produces paths that resolve to the checkout.
[tool.coverage.paths]
openmetadata_managed_apis = [
    "openmetadata_managed_apis",
    "*/site-packages/openmetadata_managed_apis",
]

[tool.coverage.report]
omit = [
    "*__init__*",
    "tests/*",
    "views/**",
    "plugin.py"
]